Use forced heights, disable padding, and fix the send bar overlapping the messages. There are a lot of changes.

--- a/chat/styles.css
+++ b/chat/styles.css
@@ -10,13 +10,14 @@ body {
 	background-size: 100%;
 }
 #send {
-	padding: 3px;
+	padding: 0px;
 	position: fixed;
 	bottom: 2%;
 	width: 100%;
+    height: 5%;
 }
 p {
-	padding: 3px;
+	padding: 0px;
 	position: fixed;
 	bottom: 0%;
 	width: 100%;
@@ -46,10 +47,15 @@ p {
 	list-style-type: none;
 	margin: 0;
 	padding: 0;
+    height: 97%;
+    position: absolute;
+    left: 0px;
+    bottom: 7px;
 }
 #messages li {
-	padding: 5px 10px;
+	padding: 0px;
 	background: rgba(0, 0, 0, 0);
+  	margin: 0px;
 	color: black;
 }
 /*
@@ -57,7 +63,7 @@ p {
 	background: rgba(238, 238, 238, 10);
 }*/
 #messages {
-	margin-bottom: 40px 
+
 }
 
 dialog {
